[package]
name = "java_sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
jni = { version = "0.21.1" }
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate_type = ["cdylib"]
